--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,37 @@
-celery
 aiofiles==0.6.0
 aiohttp==3.7.2
 aiohttp-jinja2==1.3.0
 aiohttp-session==2.9.0
 aioredis==1.3.1
+amqp==5.0.1
 async-timeout==3.0.1
 attrs==20.2.0
+billiard==3.6.3.0
+celery==5.0.2
 cffi==1.14.3
 chardet==3.0.4
+click==7.1.2
+click-didyoumean==0.0.3
+click-repl==0.1.6
 cryptography==3.2.1
 hiredis==1.1.0
 idna==2.10
+importlib-metadata==2.0.0
 Jinja2==2.11.2
+kombu==5.0.2
 MarkupSafe==1.1.1
 multidict==5.0.0
 numpy==1.19.4
 pandas==1.1.4
+prompt-toolkit==3.0.8
+pyarrow==2.0.0
 pycparser==2.20
 python-dateutil==2.8.1
 pytz==2020.4
+redis==3.5.3
 six==1.15.0
 typing-extensions==3.7.4.3
+vine==5.0.0
+wcwidth==0.2.5
 yarl==1.6.2
+zipp==3.4.0
